welcome.lessons.welcome.variables.Variables.scala.error
Variables:13: error: not found: value poseBiscui
poseBiscui() 
^