welcome.lessons.welcome.variables.Variables.scala.code
var compteur:Int=0
while(!estSurBiscuit()) {
	compteur=compteur + 1
	avance()
}
prendBiscuit()
while(compteur!=0)
{
	recule()
	compteur=compteur -1
}
poseBiscui()